@@ -68,19 +68,6 @@
 					<target>15</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						--add-opens=java.base/java.lang=ALL-UNNAMED
-						--add-opens java.base/java.security=ALL-UNNAMED
-						--add-opens java.base/java.util=ALL-UNNAMED
-						--add-opens java.base/java.net=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
-
 		</plugins>
 	</build>
 </project>
